[gd_scene load_steps=15 format=3 uid="uid://chhtc4tucacpj"]

[ext_resource type="Script" path="res://game.gd" id="1_7q5s7"]
[ext_resource type="Script" path="res://GridContainer.gd" id="2_j0reu"]
[ext_resource type="Texture2D" uid="uid://ekk71aciq60f" path="res://res/background.png" id="2_swlbs"]
[ext_resource type="PackedScene" uid="uid://cmr1iknft5hq3" path="res://runestone.tscn" id="3_pcgsc"]
[ext_resource type="Texture2D" uid="uid://bn5jt4vhc1wa3" path="res://res/player.png" id="3_qpoq1"]
[ext_resource type="Texture2D" uid="uid://c518jxij4rxw6" path="res://res/enemy.png" id="5_27og8"]

[sub_resource type="Animation" id="Animation_k3r6q"]
resource_name = "take_damage"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(174.915, 377), Vector2(181.16, 377), Vector2(174.915, 377), Vector2(181.16, 377), Vector2(174.915, 377), Vector2(181.16, 377), Vector2(174.915, 377), Vector2(181.16, 377), Vector2(174.915, 377)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.5, 0.7, 0.9, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.956863, 0.156863, 0.254902, 0.607843), Color(1, 1, 1, 1), Color(0.956863, 0.156863, 0.254902, 0.607843), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vjvwi"]
resource_name = "cast_rune"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1.6245, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.776471, 0.839216, 0.94902, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 0.965936, 1),
"update": 0,
"values": [Vector2(175, 377), Vector2(208.58, 377), Vector2(175, 377)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1.56917, 1),
"update": 0,
"values": [0.0, 0.0628319, 0.0]
}

[sub_resource type="Animation" id="Animation_0bow2"]
resource_name = "heal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.517647, 0.960784, 0.219608, 0.803922), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_v2uqu"]
resource_name = "defense"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.43, 0.43), Vector2(0.46, 0.46), Vector2(0.43, 0.43)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.627451, 0.443137, 0.219608, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wrvv3"]
_data = {
"cast_rune": SubResource("Animation_vjvwi"),
"defense": SubResource("Animation_v2uqu"),
"heal": SubResource("Animation_0bow2"),
"take_damage": SubResource("Animation_k3r6q")
}

[sub_resource type="Animation" id="Animation_slmkg"]
resource_name = "take_damage"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(903, 247), Vector2(921.255, 247), Vector2(903, 247), Vector2(921.255, 247), Vector2(903, 247), Vector2(921.255, 247), Vector2(903, 247), Vector2(921.255, 247), Vector2(903, 247)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.5, 0.7, 0.9, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.956863, 0.156863, 0.254902, 0.607843), Color(1, 1, 1, 1), Color(0.956863, 0.156863, 0.254902, 0.607843), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wfukm"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(903, 247), Vector2(864.13, 247), Vector2(903, 247)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.127409, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2jqxn"]
_data = {
"attack": SubResource("Animation_wfukm"),
"take_damage": SubResource("Animation_slmkg")
}

[node name="Game" type="Node2D"]
script = ExtResource("1_7q5s7")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576, 323)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_swlbs")

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(175, 377)
scale = Vector2(0.43, 0.43)
texture = ExtResource("3_qpoq1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerSprite"]
libraries = {
"": SubResource("AnimationLibrary_wrvv3")
}

[node name="EnemySprite" type="Sprite2D" parent="."]
position = Vector2(903, 247)
scale = Vector2(0.34, 0.34)
texture = ExtResource("5_27og8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnemySprite"]
libraries = {
"": SubResource("AnimationLibrary_2jqxn")
}

[node name="CastUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GridContainer" type="GridContainer" parent="CastUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 308.0
offset_top = 92.0
offset_right = 676.0
offset_bottom = 460.0
grow_horizontal = 2
grow_vertical = 2
columns = 3
script = ExtResource("2_j0reu")

[node name="Runeword" type="Control" parent="CastUI"]
layout_mode = 3
anchors_preset = 0
offset_left = -131.0
offset_top = 8.0
offset_right = -91.0
offset_bottom = 48.0

[node name="ElementSlot" type="ColorRect" parent="CastUI/Runeword"]
layout_mode = 0
offset_left = 913.0
offset_top = 428.0
offset_right = 1013.0
offset_bottom = 528.0
color = Color(0.207843, 0.207843, 0.207843, 1)

[node name="Element" type="Label" parent="CastUI/Runeword"]
layout_mode = 0
offset_left = 930.0
offset_top = 465.0
offset_right = 994.0
offset_bottom = 488.0
text = "Element"

[node name="ElementIndicator" type="Control" parent="CastUI/Runeword"]
anchors_preset = 0
offset_left = 54.0
offset_top = 264.0
offset_right = 94.0
offset_bottom = 304.0

[node name="ColorRect" type="ColorRect" parent="CastUI/Runeword/ElementIndicator"]
layout_mode = 0
offset_left = 859.0
offset_top = 164.0
offset_right = 959.0
offset_bottom = 169.0

[node name="ColorRect2" type="ColorRect" parent="CastUI/Runeword/ElementIndicator"]
layout_mode = 0
offset_left = 859.0
offset_top = 259.0
offset_right = 959.0
offset_bottom = 264.0

[node name="ColorRect3" type="ColorRect" parent="CastUI/Runeword/ElementIndicator"]
layout_mode = 0
offset_left = 859.0
offset_top = 164.0
offset_right = 864.0
offset_bottom = 264.0

[node name="ColorRect4" type="ColorRect" parent="CastUI/Runeword/ElementIndicator"]
layout_mode = 0
offset_left = 954.0
offset_top = 164.0
offset_right = 959.0
offset_bottom = 264.0

[node name="ElementRune" parent="CastUI/Runeword" instance=ExtResource("3_pcgsc")]
visible = false
position = Vector2(909, 214)

[node name="ActionSlot" type="ColorRect" parent="CastUI/Runeword"]
layout_mode = 0
offset_left = 1055.0
offset_top = 428.0
offset_right = 1155.0
offset_bottom = 528.0
color = Color(0.207843, 0.207843, 0.207843, 1)

[node name="Action" type="Label" parent="CastUI/Runeword"]
layout_mode = 0
offset_left = 1081.0
offset_top = 464.0
offset_right = 1145.0
offset_bottom = 487.0
text = "Action
"

[node name="ActionIndicator" type="Control" parent="CastUI/Runeword"]
layout_mode = 3
anchors_preset = 0
offset_left = 196.0
offset_top = 264.0
offset_right = 236.0
offset_bottom = 304.0

[node name="ColorRect" type="ColorRect" parent="CastUI/Runeword/ActionIndicator"]
layout_mode = 0
offset_left = 859.0
offset_top = 164.0
offset_right = 959.0
offset_bottom = 169.0

[node name="ColorRect2" type="ColorRect" parent="CastUI/Runeword/ActionIndicator"]
layout_mode = 0
offset_left = 859.0
offset_top = 259.0
offset_right = 959.0
offset_bottom = 264.0

[node name="ColorRect3" type="ColorRect" parent="CastUI/Runeword/ActionIndicator"]
layout_mode = 0
offset_left = 859.0
offset_top = 164.0
offset_right = 864.0
offset_bottom = 264.0

[node name="ColorRect4" type="ColorRect" parent="CastUI/Runeword/ActionIndicator"]
layout_mode = 0
offset_left = 954.0
offset_top = 164.0
offset_right = 959.0
offset_bottom = 264.0

[node name="ActionRune" parent="CastUI/Runeword" instance=ExtResource("3_pcgsc")]
visible = false
position = Vector2(909, 360)

[node name="EnemyInfo" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BarBackground" type="ColorRect" parent="EnemyInfo"]
layout_mode = 0
offset_left = 208.0
offset_top = 32.0
offset_right = 1008.0
offset_bottom = 52.0
color = Color(0.219608, 0.054902, 0.0392157, 1)

[node name="EnemyHealthBar" type="ColorRect" parent="EnemyInfo"]
layout_mode = 0
offset_left = 208.0
offset_top = 32.0
offset_right = 1008.0
offset_bottom = 52.0
color = Color(0.752941, 0.282353, 0.231373, 1)

[node name="HP" type="Label" parent="EnemyInfo"]
layout_mode = 0
offset_left = 952.0
offset_top = 32.0
offset_right = 1006.0
offset_bottom = 55.0
text = "100 HP"

[node name="Type" type="Label" parent="EnemyInfo"]
layout_mode = 0
offset_left = 208.0
offset_top = 52.0
offset_right = 283.0
offset_bottom = 75.0
text = "Type: Fire"

[node name="Name" type="Label" parent="EnemyInfo"]
layout_mode = 0
offset_left = 208.0
offset_top = 8.0
offset_right = 311.0
offset_bottom = 31.0
text = "Enemy Name"

[node name="NextDamage" type="Label" parent="EnemyInfo"]
layout_mode = 0
offset_left = 895.0
offset_top = 52.0
offset_right = 1076.0
offset_bottom = 75.0
text = "Next Attack 10"

[node name="PlayerInfo" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BarBackground" type="ColorRect" parent="PlayerInfo"]
layout_mode = 0
offset_left = 24.0
offset_top = 599.0
offset_right = 424.0
offset_bottom = 619.0
color = Color(0.219608, 0.054902, 0.0392157, 1)

[node name="PlayerHealthBar" type="ColorRect" parent="PlayerInfo"]
layout_mode = 0
offset_left = 24.0
offset_top = 599.0
offset_right = 424.0
offset_bottom = 619.0
color = Color(0.752941, 0.282353, 0.231373, 1)

[node name="HP" type="Label" parent="PlayerInfo"]
layout_mode = 0
offset_left = 368.0
offset_top = 599.0
offset_right = 422.0
offset_bottom = 622.0
text = "100 HP"

[node name="Defense" type="Label" parent="PlayerInfo"]
layout_mode = 0
offset_left = 24.0
offset_top = 576.0
offset_right = 64.0
offset_bottom = 599.0
text = "Defense: Fire"

[node name="HealDot" type="Label" parent="PlayerInfo"]
layout_mode = 0
offset_left = 174.0
offset_top = 576.0
offset_right = 262.0
offset_bottom = 599.0
text = "DoT Heal: 3"

[node name="DoubleEffect" type="Label" parent="PlayerInfo"]
layout_mode = 0
offset_left = 307.0
offset_top = 576.0
offset_right = 424.0
offset_bottom = 599.0
text = "2x Effect: Earth"

[node name="Runeroll" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1123.0
offset_top = 600.0
offset_right = 1163.0
offset_bottom = 640.0
scale = Vector2(0.4, 0.4)

[node name="Info" type="Label" parent="Runeroll"]
layout_mode = 0
offset_left = -640.0
offset_top = -100.0
offset_right = -513.0
offset_bottom = -77.0
scale = Vector2(2.73, 2.73)
text = "Available Runes:"

[node name="Rune0" parent="Runeroll" instance=ExtResource("3_pcgsc")]
position = Vector2(-600, 20.8333)

[node name="Rune1" parent="Runeroll" instance=ExtResource("3_pcgsc")]
position = Vector2(-466.667, 19.9999)

[node name="Rune2" parent="Runeroll" instance=ExtResource("3_pcgsc")]
position = Vector2(-333.333, 19.9999)

[node name="Rune3" parent="Runeroll" instance=ExtResource("3_pcgsc")]
position = Vector2(-200, 19.9999)

[node name="Rune4" parent="Runeroll" instance=ExtResource("3_pcgsc")]
position = Vector2(-66.6667, 19.9999)
